--- a/demo.html
+++ b/demo.html
@@ -11,10 +11,7 @@
       width = screen.availWidth / 5;
       if(width > 300) width = 300;
       param = "top=0,left=0,height="+height+",width="+width;
-      window.open("index.html","menu",param);
+      window.open("menu.html","menu",param);
     </script>
   </head>
 </html>
-
-
-
